# quant-learning

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 01-returns-and-risk.md  learning-log.md
src/: __init__.py  returns.py
tests/: test_returns.py
